[package]
name = "windscribe-ephemeral-port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
tokio = { version = "1", features = ["full"] }
async-recursion = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.17"
lazy-regex = "3.0"
clap = { version = "4.3", features = ["derive", "env"] }
directories = "5.0"