[package]
name = "windscribe-ephemeral-port"
version = "0.1.0"
authors = ["nezu"]
edition = "2021"
description = "Automatically create windscribe ephemeral ports and update torrent clients"
repository = "https://github.com/dumbasPL/windscribe-ephemeral-port"
license = "MIT"
keywords = ["windscribe", "vpn", "torrent", "port", "port-forwarding", "ephemeral"]
categories = ["command-line-utilities", "config", "network-programming"]
exclude = ["docker-compose.yml", ".editorconfig", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version =  "0.3", features = ["env-filter"] }
async-recursion = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
reqwest-middleware = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
scraper = "0.17"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.17"
lazy-regex = "3.0"
clap = { version = "4.3", features = ["derive", "env"] }
clap-verbosity-flag = "2.0"
directories = "5.0"
shell-words = "1.1"
async-trait = "0.1"
tokio-cron-scheduler = "0.9"
serde_path_to_error = "0.1"